[project]
name = "occupancy-forecast-local"
version = "0.1.0"
description = "Offline privacy-first occupancy forecasting, anomaly detection, and capacity recommendation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.3",
  "jinja2>=3.1.4",
  "numpy>=2.1.3",
  "pydantic>=2.9.2",
  "rich>=13.9.4",
  "typer>=0.12.5",
]

[project.scripts]
occupancy-forecast = "occupancy_forecast_local.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/occupancy_forecast_local"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

